Add pipeline script for http scale test
This commit also adds a sample property file with the parameters
used by the test.

--- a/alderaan/Jenkinsfile
+++ b/alderaan/Jenkinsfile
@@ -8,58 +8,71 @@ def mastervertical = MASTERVERTICAL_SCALE_TEST.toString().toUpperCase()
 def install_openstack = OPENSTACK_INSTALL.toString().toUpperCase()
 def browbeat = BROWBEAT_INSTALL.toString().toUpperCase()
 def scaleup = OPENSHIFT_SCALEUP.toString().toUpperCase()
+def http = HTTP_TEST.toString().toUpperCase()
 def logging = LOGGING_SCALE_TEST.toString().toUpperCase()
+def pgbench_test = PGBENCH_TEST.toString().toUpperCase()
 
 
 node {
     // clear workspace
     deleteDir()
+
     // clone aos-cd-jobs repo where all the pipeline scripts exist
-    sh "git clone https://github.com/openshift/aos-cd-jobs.git aos-cd-jobs; cd aos-cd-jobs"
+    sh "git clone https://github.com/chaitanyaenr/aos-cd-jobs.git aos-cd-jobs; cd aos-cd-jobs; git checkout tooling"
 
     // stage to install openstack
     if (install_openstack == "TRUE") {
-        load "aos-cd-jobs/alderaan/setup_openstack.groovy"
+        load "aos-cd-jobs/alderaan/pipeline-scripts/setup_openstack.groovy"
     }
 
     // stage to set up browbeat
     if (browbeat == "TRUE") {
-        load "aos-cd-jobs/alderaan/browbeat.groovy"
+        load "aos-cd-jobs/alderaan/pipeline-scripts/browbeat.groovy"
     }
 
     // stage to install openshift
     if (openshift_install == "TRUE") {
-	load "aos-cd-jobs/alderaan/openshift.groovy"
+	load "aos-cd-jobs/alderaan/pipeline-scripts/scale-ci.groovy"
     }
 
     // stage to setup pbench
     if (setup_tooling == "TRUE") {
-        load "aos-cd-jobs/alderaan/tooling.groovy"
+        load "aos-cd-jobs/alderaan/pipeline-scripts/tooling.groovy"
     }
 
     // stage to run conformance
     if (run_conformance == "TRUE") {
-	load "aos-cd-jobs/alderaan/conformance.groovy"
+	load "aos-cd-jobs/alderaan/pipeline-scripts/conformance.groovy"
     }
 
     // stage to scaleup the cluster
     if (scaleup == "TRUE") {
-        load "aos-cd-jobs/alderaan/scaleup.groovy"
+        load "aos-cd-jobs/alderaan/pipeline-scripts/scaleup.groovy"
     }
 
     // stage to run nodevertical scale test
     if (nodevertical == "TRUE") {
-        load "aos-cd-jobs/alderaan/nodevertical.groovy"
+        load "aos-cd-jobs/alderaan/pipeline-scripts/nodevertical.groovy"
     }
 
     // stage to run mastervertical scale test
     if (mastervertical == "TRUE") {
-        load "aos-cd-jobs/alderaan/mastervertical.groovy"
+        load "aos-cd-jobs/alderaan/pipeline-scripts/mastervertical.groovy"
     }
 
     // stage to run logging scale test
     if (logging == "TRUE") {
-	load "aos-cd-jobs/alderaan/logging.groovy"
+	load "aos-cd-jobs/alderaan/pipeline-scripts/logging.groovy"
+    }
+
+    // stage to run http scale test
+    if (http == "TRUE") {
+       load "aos-cd-jobs/alderaan/pipeline-scripts/http.groovy"
+    }
+    
+    // stage to run pgbench scale test
+    if ( pgbench_test == "TRUE" ) {
+      load "aos-cd-jobs/alderaan/pipeline-scripts/pgbench.groovy"
     }
 
     mail(
