--- a/alderaan/property_files/openstack.properties
+++ b/alderaan/property_files/openstack.properties
@@ -1,8 +1,16 @@
 RHOS_RELEASE_URL=
 STACK_PASSWORD=
+OSP_EXTERNAL_NETWORK_SETUP=
 EXTERNAL_NETWORK_VIP=
 PRIVATE_EXTERNAL_ADDRESS=
-DNS_SERVER=
+OSP_DNS_SERVER=
+OSP_EXTERNAL_VLAN=
+OSP_EXTERNAL_NET_CIDR=
+OSP_EXTERNAL_NET_GATEWAY=
+OSP_EXTERNAL_NET_POOL_START=
+OSP_EXTERNAL_NET_POOL_END=
+OSP_FIP_POOL_START=
+OSP_FIP_POOL_END=
 INSTACKENV_JSON=
 CLOUD_TITLE=
 TICKET_NUMBER=
@@ -14,3 +22,4 @@ NTP_SERVER=
 JENKINS_SLAVE_LABEL=
 CLOUD_NAME=
 GRAPHITE=
+
