Adding RUN_TIME, ROUTE_TERMINATION, SMOKE_TEST and NAMESPACE_CLEANUP  parameters.

--- a/alderaan/property_files/http.properties
+++ b/alderaan/property_files/http.properties
@@ -37,5 +37,11 @@ LOAD_GENERATOR_NODES=
 CL_PROJECTS=10
 # Number of templates to create per project.
 CL_TEMPLATES=50
+# Run time of individual HTTP test iterations in seconds.
+RUN_TIME=120
+# Perform the test for the following (comma-separated) route terminations: mix,http,edge,passthrough,reencrypt
+ROUTE_TERMINATION=mix
 # Run only a single HTTP test to establish functionality.
-SMOKE_TEST=true
+SMOKE_TEST=false
+# Delete all namespaces with application pods, services and routes created for the purposes of HTTP tests.
+NAMESPACE_CLEANUP=true
