--- a/alderaan/Jenkinsfile
+++ b/alderaan/Jenkinsfile
@@ -13,6 +13,7 @@ def http = HTTP_TEST.toString().toUpperCase()
 def logging = LOGGING_SCALE_TEST.toString().toUpperCase()
 def pgbench_test = PGBENCH_TEST.toString().toUpperCase()
 def podvertical = PODVERTICAL.toString().toUpperCase()
+def deployments_per_ns = DEPLOYMENTS_PER_NS.toString().toUpperCase()
 
 node {
 	// clear workspace
@@ -68,17 +69,22 @@ node {
 
 	// stage to run http scale test
 	if (http == "TRUE") {
-	 load "aos-cd-jobs/alderaan/pipeline-scripts/http.groovy"
+		load "aos-cd-jobs/alderaan/pipeline-scripts/http.groovy"
 	}
 
 	// stage to run pgbench scale test
 	if ( pgbench_test == "TRUE" ) {
-	load "aos-cd-jobs/alderaan/pipeline-scripts/pgbench.groovy"
+		load "aos-cd-jobs/alderaan/pipeline-scripts/pgbench.groovy"
 	}
 
 	// stage to run podvertical test
 	if ( podvertical == "TRUE" ) {
-	load "aos-cd-jobs/alderaan/pipeline-scripts/podvertical.groovy"
+		load "aos-cd-jobs/alderaan/pipeline-scripts/podvertical.groovy"
+	}
+
+	// stage to run deployments per ns test
+	if ( deployments_per_ns == "TRUE" ) {
+		load "aos-cd-jobs/alderaan/pipeline-scripts/deployments_per_ns.groovy"
 	}
 
 	mail(
