--- a/alderaan/Jenkinsfile
+++ b/alderaan/Jenkinsfile
@@ -14,6 +14,7 @@ def logging = LOGGING_SCALE_TEST.toString().toUpperCase()
 def pgbench_test = PGBENCH_TEST.toString().toUpperCase()
 def podvertical = PODVERTICAL.toString().toUpperCase()
 def deployments_per_ns = DEPLOYMENTS_PER_NS.toString().toUpperCase()
+def ns_per_cluster = NS_PER_CLUSTER.toString().toUpperCase()
 
 node {
 	// clear workspace
@@ -85,6 +86,11 @@ node {
 	// stage to run deployments per ns test
 	if ( deployments_per_ns == "TRUE" ) {
 		load "aos-cd-jobs/alderaan/pipeline-scripts/deployments_per_ns.groovy"
+	}
+
+	// stage to run ns_per_cluster test
+	if ( ns_per_cluster == "TRUE" ) {
+		load "aos-cd-jobs/alderaan/pipeline-scripts/ns_per_cluster.groovy"
 	}
 
 	mail(
